k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: biblioteca-api
  name: biblioteca-api
  namespace: biblioteca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: biblioteca-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: biblioteca-api
    spec:
      containers:
      - image: baall/biblioteca-ada:latest
        name: biblioteca-api
        imagePullPolicy: Always
        livenessProbe:
          httpGet: 
            path: /actuator/health/livenessState
            port: 420
        readinessProbe:
          httpGet: 
            path: /actuator/health/readinessState
            port: 420
        ports:
          - containerPort: 420
        resources:
          limits:
            memory: 500Mi
          requests:
            memory: 500Mi
