k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: biblioteca-svc
  namespace: biblioteca
spec:
  selector:
    app: biblioteca-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 420
  type: ClusterIP
