k8s/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: biblioteca-api-route
  namespace: biblioteca
spec:
  parentRefs:
  - name: gateway
    namespace: default
  hostnames:
  - biblioteca-ada.com
  rules:
  - name: api
    matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Content-Type-Options
          value: nosniff
        - name: X-Frame-Options
          value: DENY
        - name: X-XSS-Protection
          value: "1; mode=block"
    backendRefs:
    - name: biblioteca-svc
      port: 80
  - name: actuator
    matches:
    - path:
        type: PathPrefix
        value: /actuator
    backendRefs:
    - name: biblioteca-svc
      port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy 
metadata:
  name: biblioteca-policy-route
  namespace: biblioteca
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: biblioteca-api-route
  rateLimit:
    local:
      rules:
        - limit:
            requests: 5
            unit: Second
  requestBuffer:
    limit: 1Mi
  compressor:
    - type: Gzip
      gzip: {}
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: basic-auth
  namespace: biblioteca
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: biblioteca-api-route
      sectionName: actuator
  basicAuth:
    users:
      name: "basic-auth"
